# ft-ddns

./: Cargo.toml  LICENSE.txt  README.md  askama.toml
migration/: Cargo.toml
migration/src/: initialize_table.rs  lib.rs  migration_many_admin.rs  migration_signing_account.rs
src/: client_response.rs  ip.rs  main.rs  route53.rs  utils.rs
src/account/: admin_account.rs  mod.rs  password_account.rs  signing_account.rs
src/init/: auto_config.rs  db.rs  log.rs  mod.rs
src/routes/: management.rs  mod.rs  secure_http.rs  unsecure_http.rs
templates/: command_download.txt  ft-ddns.txt
